Fix 'events' spacing issue

--- a/style.scss
+++ b/style.scss
@@ -255,10 +255,6 @@ body {
         padding: .5rem 1.8rem .5rem 1.8rem;
         @include box-shadow();
 
-        > * {
-            padding: .6rem 0 .6rem 0;
-        }
-
         ::first-line {
             font-size: .85rem;
             font-weight: 600;
@@ -267,6 +263,7 @@ body {
         }
 
         :nth-child(2) {
+            padding: 1rem 0 1.5rem 0;
             border-top: 1px solid rgb(210, 210, 210);
             border-bottom: 1px solid rgb(210, 210, 210);
         }
